# IPCsim

./: CMakeLists.txt  README.md  build.sh  input.in  inputJanus.in  stages.in  staging.in  submission.slurm  vmdscript.vmd  vsc_submission_notes.txt
2014version/: asymmetric_softIPC_w_masses_Field_MD.cpp  softIPC_MD.cpp  softIPC_MD_mitfarbenohnefield.cpp
2014version/postprocess/: crosscorrelation(nammerda).cpp  discernedacs.cpp  meanFkt_judas.cpp  postprocess.cpp  postprocess_old.cpp  postprocess_veryold.cpp  zilvo.hpp
2016version/: asymmetric_softIPC_MD.cpp  input.in  input_asymm.txt
2016version/postprocess/: fastpostprocess.cpp  myMDtoEmasMC_conversion.py  postprocess_so_old_thats_missing_even_atc.cpp  single_particle_msd.cpp  slowfast_particles.py  slowfast_particles.sh
GROMACS/co2example/: links.txt  topol.top
Order-Parameters/: Makefile  README.txt  basic_constants.f90  build.sh  crystal_analysis.f90  global_variables.f90  mc-inputfile  post_proc.f90  startingstate.xyz
Order-Parameters/src/: Makefile  crystal_analysis.f90  numeric_kinds.f90  spherical_harmonics.f90
data_analysis_helper_scripts/: average_results.sh  clusterSize_averager.py  file_averager.py
gnuplot_scripts/: contour_plots.gpi  emanuela_xy_r.gpi  typicalOrientations2D.gpi
lammps/: 3D_construct_starting_configuration_file.py  3D_startingstate_FCCsquare_layers.py  3D_startingstate_cubiclattice.py  3D_startingstate_wafer_layers.py  3D_startingstate_wafer_layers_full.py  IPC_startingstate_manner.txt  in.IPCs
lammps/direct_coex/template/: IPC_in.in  IPC_startingstate_manner.txt
lammps/experiments/: IPC_1_in.in  IPC_1_startingstate.txt  IPC_epitaxy_in.in  IPC_in.in  IPC_startingstate_1000.txt  IPC_startingstate_27.txt  IPC_startingstate_manner.txt  co2_1_in.in  co2_1_startingstate.txt  co2_in.in  vmdscript.tk
lammps/postprocess/: CMakeLists.txt  IPC.hpp  IPCpairCorrelation.cpp  IPCpairCorrelation.hpp  IPCpostprocess.cpp  IPCpostprocess.hpp  IPCpostprocessNeighbourAnalysis.cpp  IPCpostprocessNeighbourAnalysis.hpp  IPCpostprocessOrientationsAnalysis.cpp  IPCpostprocessOrientationsAnalysis.hpp  IPCpostprocessPotential.cpp  IPCpostprocessPotential.hpp  inputfile.txt  main.cpp  sample_trajectory.lammpstrj
lammps/printpotential/: inputfile.txt  printPotential.cpp
src/: CMakeLists.txt  IPC.hpp  IPCsimulation.cpp  IPCsimulation.hpp  IPCsimulator.cpp  IPCsimulator.hpp  JanusIPCsimulation.hpp  cell_lists.cpp  cell_lists.hpp  correlation_functions.hpp  input.in  main.cpp  randomNumberGenerator.hpp  zilrandom.hpp  zilvectors.hpp
src/1patch/: CMakeLists.txt  JanusIPCsimulation.cpp  JanusIPCsimulation.hpp  mainJanus.cpp
src/2patches/: CMakeLists.txt  IPCsimulation.cpp  IPCsimulation.hpp  input.in  main.cpp  stages.in
src/IPCsimMD/: CMakeLists.txt  IPCsimulation.cpp  IPCsimulation.hpp  IPCsimulationAnalysis.cpp  IPCsimulationCommon.cpp  IPCsimulationJanus.cpp  IPCsimulationPrint.cpp  input.in  main.cpp
src/IPEsimMC/: CMakeLists.txt  IPEsimulation.cpp  IPEsimulation.hpp  input.in  main.cpp  stages.in
src/helpers/: CMakeLists.txt  cell_lists.cpp  cell_lists.hpp  isotropic_pair_correlation_function.hpp  pair_correlation_function.hpp  randomNumberGenerator.hpp
src/postprocess/: CMakeLists.txt  IPCpostprocess.cpp  IPCpostprocess.cpp.orig  IPCpostprocess.hpp  main.cpp  printOrientations.gpi
src/simulation/: IPCsimulation.cpp  IPCsimulation.hpp  IPCsimulationCommon.cpp  IPCsimulationJanus.cpp  main.cpp  stages.in
startingstate_creators/: epitaxy_60n_manner_plane.py  epitaxy_60n_square_plane.py  epitaxy_manner_plane.py  manner_structure.py  vmdtricks_scaled_45n.tk  vmdtricks_scaled_60n.tk
toyModelWithScaledOmegas/: asymmetric_computeAngularPlots.py  asymmetric_plotmodels.gpi  asymmetric_runall.sh  computeAngularPlotsAndScaledCoefficients.py  computeScaledCoefficients.py  symmetric_computeAngularPlots.py  symmetric_plotmodels.gpi  symmetric_plotmodelsPNG.gpi  symmetric_runall.sh
